tmp-prod-full/objects/MagazineSubscription__c/fields/IsUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>회원 상세 정보 최종 업데이트 여부</description>
    <label>업데이트 여부</label>
    <type>Checkbox</type>
</CustomField>