tmp-prod-full/objects/MagazineSubscription__c/fields/MemberName__c.field-meta.xml
<CustomField>
    <fullName>MemberName__c</fullName>
    <label>회원명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>