tmp-prod-full/objects/MagazineSubscription__c/fields/MemberNo__c.field-meta.xml
<CustomField>
    <fullName>MemberNo__c</fullName>
    <label>회원번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>