tmp-prod-full/objects/MagazineSubscription__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>휴대폰번호</label>
    <type>Phone</type>
</CustomField>