tmp-prod-full/objects/MagazineSubscription__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>시즌</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>봄</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>여름</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>가을</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>겨울</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>