tmp-prod-full/objects/MagazineSubscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsUpdated__c</columns>
    <columns>Season__c</columns>
    <columns>ApplicationYear__c</columns>
    <columns>ApplicationDate__c</columns>
    <columns>MemberName__c</columns>
    <columns>MemberNo__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>Grade__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>